[package]
name = "axum_example"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum_grants = {path ="../axum_grants"}
#serde = { version = "1", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
axum = "0.7.4"
axum-extra = "0.9.2"
#tower-http = { version = "0.5.0", features = ["full", "cors"] }
